Changes for 3.4.5rc1

New features:
..F....... [ZBX-12809] implemented overlay dialog centering using javascript (miks)

Bug fixes:
.......PS. [ZBX-12497] improved VMware event log data collection and processing (gleb)
...G...... [ZBX-8054] relieved windows agent of dependency on MFC (valdis)
..F....... [ZBX-13024] fixed missed url search part in request login parameter (miks)
....I..... [ZBX-12798] added --with-libpcre-lib configure option (valdis)
..F....... [ZBX-13044] fixed undefined index when setting strict-transport-security http header (miks)
..F....... [ZBX-12897] fixed error causing empty list in popup window when opened from page having host group filter (gcalenko)
..F....... [ZBX-12948] fixed percentile visibility in dashboard graph widgets (gcalenko)
A.F....... [ZBX-12655] added filter on event details page to show messages sent to users only from same groups (gcalenko)
........S. [ZBX-13061] fixed memory leak in preprocessing manager (wiper)
....I..... [ZBX-12232] fixed mysql m4 configuration script for mariadb C connector (abs)
..F....... [ZBX-12663] fixed retaining the scrollbar position on page reload (Ivo)
..F....... [ZBX-12247] fixed multiselect not showing results for read-only objects in screen configuration (Ivo)
..F....... [ZBX-13016] fixed warning message shown by deprecated PHP 7.2 function create_function() (Sasha)
..F....... [ZBX-12130] fixed max length validation in textarea fields (Ivo)
........S. [ZBX-13027] fixed floating range validation during conversion from uint64 to float (wiper)
........S. [ZBX-12975] fixed possibility of foreign key constraint failure due to events being removed before trigger data storage period expires (vso)
........S. [ZBX-11426] fixed potentially incorrect delete procedure for problems and events (abs)
........S. [ZBX-8049] fixed zabbix[java,,ping] to stay supported when java gateway is down (valdis)
....I..... [ZBX-12895] improved performance of DB patch for updating data in the alerts table (Sergejs)