@@ -1447,11 +1447,14 @@ static void	get_escalation_history(zbx_uint64_t actionid, const DB_EVENT *event,
 
 	while (NULL != (row = DBfetch(result)))
 	{
+		int	user_permit;
+
 		now = atoi(row[0]);
 		type = (unsigned char)atoi(row[1]);
 		status = (unsigned char)atoi(row[2]);
 		esc_step = atoi(row[6]);
 		ZBX_DBROW2UINT64(userid, row[7]);
+		user_permit = zbx_check_user_permissions(&userid, recipient_userid);
 
 		if (0 != esc_step)
 			zbx_snprintf_alloc(&buf, &buf_alloc, &buf_offset, "%d. ", esc_step);
@@ -1476,7 +1479,7 @@ static void	get_escalation_history(zbx_uint64_t actionid, const DB_EVENT *event,
 
 			description = (SUCCEED == DBis_null(row[3]) ? "" : row[3]);
 
-			if (SUCCEED == zbx_check_user_permissions(&userid, recipient_userid))
+			if (SUCCEED == user_permit)
 			{
 				send_to = row[4];
 				user_name = zbx_user_string(userid);
@@ -1494,7 +1497,13 @@ static void	get_escalation_history(zbx_uint64_t actionid, const DB_EVENT *event,
 		}
 
 		if (ALERT_STATUS_FAILED == status)
-			zbx_snprintf_alloc(&buf, &buf_alloc, &buf_offset, " %s", row[5]);	/* alert error */
+		{
+			/* alert error can be generated by SMTP Relay or other media and contain sensitive details */
+			if (SUCCEED == user_permit)
+				zbx_snprintf_alloc(&buf, &buf_alloc, &buf_offset, " %s", row[5]);
+			else
+				zbx_strcpy_alloc(&buf, &buf_alloc, &buf_offset, " \"Inaccessible error message\"");
+		}
 
 		zbx_chrcpy_alloc(&buf, &buf_alloc, &buf_offset, '\n');
 	}
